--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -12,7 +12,8 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:react-native/all"
     ],
     "rules": {
         // overrides
