--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
-    "react-native-elements": "^0.16.0"
+    "react-native-elements": "^0.16.0",
+    "react-native-logger": "^1.0.3"
   }
 }
