--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,9 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-native-elements": "^0.16.0",
-    "react-native-logger": "^1.0.3"
+    "react-native-logger": "^1.0.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
