--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-native": "^0.47.0",
     "react-native-elements": "^0.16.0",
     "react-native-logger": "^1.0.3",
+    "react-native-simple-modal": "^7.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
