--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^8.0.0",
+    "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-react-native": "^3.1.0",
     "jest-expo": "~20.0.0",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
     "react-native-scripts": "1.3.1",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "redux-mock-store": "^1.3.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
