--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "name": "moovel_testme",
-  "displayName": "movel team",
+  "displayName": "moovel_testme",
   "expo": {
     "name": "git gud",
     "sdkVersion": "20.0.0"
